# mbpi

./: README.md  pyproject.toml
mbpi/: adjacency_matrix.py  brusco_algorithm.py  graph_partition.py  main.py  scorers.py
mbpi/tests/: random_case_0.json  random_case_1.json  random_case_10.json  random_case_2.json  random_case_3.json  random_case_4.json  random_case_5.json  random_case_6.json  random_case_7.json  random_case_8.json  random_case_9.json
