[tool.poetry]
name = "mbpi"
version = "0.1.0"
description = ""
authors = ["amasoumnia <17am143@queensu.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
black = "^24.4.2"
xxhash = "^3.5.0"
streamlit = "^1.38.0"
flask = "^3.0.3"
altair = "^5.4.1"
jupyter = "^1.1.1"
gower = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
